--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Generate build info
+        run: |
+          echo '{"buildTime": "'$(date -u +"%Y-%m-%dT%H:%M:%SZ")'"}' > public/build-info.json
+
       - uses: superfly/flyctl-actions/setup-flyctl@master
 
       - run: flyctl deploy --remote-only
